Update for Java 9.
Change wrapper construction, FractionInterface local vars cannot call Fraction - only reduce method